--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ author: Danie Nell
 navbar-links:
   About Me: "aboutme"
   CV: "cv"
-  Resources:
+  Projects: "projects"
+ # Resources:
    # - Beautiful Jekyll: "https://beautifuljekyll.com"
    # - Learn markdown: "https://www.markdowntutorial.com/"
   # Author's home: "https://deanattali.com"
